@@ -51,7 +51,9 @@ namespace Direct3D11
 		ID3D11DepthStencilState* oldState;
 		int oldReference;
 		deviceContext->OMGetDepthStencilState( &oldState, reinterpret_cast<UINT*>( &oldReference ) );
-		oldState->Release();
+
+		if( oldState != NULL )
+			oldState->Release();
 	
 		if( value == nullptr )
 			deviceContext->OMSetDepthStencilState( 0, oldReference );
@@ -65,6 +67,8 @@ namespace Direct3D11
 		int oldReference = 0;
 		deviceContext->OMGetDepthStencilState( &oldState, reinterpret_cast<UINT*>( &oldReference ) );
 		
+		if( oldState == NULL )
+			return nullptr;
 		return SlimDX::Direct3D11::DepthStencilState::FromPointer( oldState );
 	}
 	
@@ -73,9 +77,10 @@ namespace Direct3D11
 		ID3D11DepthStencilState* oldState = 0;
 		int oldReference = 0;
 		deviceContext->OMGetDepthStencilState( &oldState, reinterpret_cast<UINT*>( &oldReference ) );
-	
 		deviceContext->OMSetDepthStencilState( oldState, value );
-		oldState->Release();
+
+		if( oldState == NULL )
+			oldState->Release();
 	}
 	
 	int OutputMergerWrapper::DepthStencilReference::get()
@@ -83,7 +88,9 @@ namespace Direct3D11
 		ID3D11DepthStencilState* oldState = 0;
 		int oldReference = 0;
 		deviceContext->OMGetDepthStencilState( &oldState, reinterpret_cast<UINT*>( &oldReference ) );
-		oldState->Release();
+
+		if( oldState == NULL )
+			oldState->Release();
 		
 		return oldReference;
 	}
@@ -94,7 +101,9 @@ namespace Direct3D11
 		float oldFactor[4];
 		int oldMask = 0;
 		deviceContext->OMGetBlendState( &oldState, oldFactor, reinterpret_cast<UINT*>( &oldMask ) );
-		oldState->Release();
+
+		if( oldState == NULL )
+			oldState->Release();
 		
 		if( value == nullptr )
 			deviceContext->OMSetBlendState( 0, oldFactor, oldMask );
@@ -121,7 +130,9 @@ namespace Direct3D11
 		
 		float newFactor[4] = { value.Red, value.Green, value.Blue, value.Alpha };
 		deviceContext->OMSetBlendState( oldState, newFactor, oldMask );
-		oldState->Release();
+
+		if( oldState == NULL )
+			oldState->Release();
 	}
 	
 	Color4 OutputMergerWrapper::BlendFactor::get()
@@ -130,7 +141,9 @@ namespace Direct3D11
 		float oldFactor[4];
 		int oldMask = 0;
 		deviceContext->OMGetBlendState( &oldState, oldFactor, reinterpret_cast<UINT*>( &oldMask ) );
-		oldState->Release();
+
+		if( oldState == NULL )
+			oldState->Release();
 		
 		return Color4( oldFactor[3], oldFactor[0], oldFactor[1], oldFactor[2] );
 	}
@@ -141,9 +154,10 @@ namespace Direct3D11
 		float oldFactor[4];
 		int oldMask = 0;
 		deviceContext->OMGetBlendState( &oldState, oldFactor, reinterpret_cast<UINT*>( &oldMask ) );
-	
 		deviceContext->OMSetBlendState( oldState, oldFactor, value );
-		oldState->Release();
+
+		if( oldState == NULL )
+			oldState->Release();
 	}
 	
 	int OutputMergerWrapper::BlendSampleMask::get()
@@ -152,7 +166,9 @@ namespace Direct3D11
 		float oldFactor[4];
 		int oldMask = 0;
 		deviceContext->OMGetBlendState( &oldState, oldFactor, reinterpret_cast<UINT*>( &oldMask ) );
-		oldState->Release();
+
+		if( oldState == NULL )
+			oldState->Release();
 		
 		return oldMask;
 	}
